crates/tokmd-tool-schema/tests/snapshots/toolschema_depth_w62__w62_clap.snap
---
source: crates/tokmd-tool-schema/tests/toolschema_depth_w62.rs
expression: v
---
{
  "description": "A test tool",
  "name": "mytool",
  "schema_version": 1,
  "tools": [
    {
      "description": "A test tool",
      "name": "mytool",
      "parameters": []
    },
    {
      "description": "Scan files",
      "name": "scan",
      "parameters": [
        {
          "description": "Target path",
          "name": "path",
          "required": true,
          "type": "string"
        },
        {
          "description": "Verbose output",
          "name": "verbose",
          "required": false,
          "type": "boolean"
        }
      ]
    },
    {
      "description": "Export results",
      "name": "export",
      "parameters": [
        {
          "default": "json",
          "description": "Output format",
          "enum_values": [
            "json",
            "csv",
            "tsv"
          ],
          "name": "format",
          "required": false,
          "type": "string"
        },
        {
          "description": "Verbosity count",
          "name": "count",
          "required": false,
          "type": "integer"
        }
      ]
    }
  ],
  "version": "2.0.0"
}
