crates/tokmd-tool-schema/tests/snapshots/toolschema_depth_w62__w62_jsonschema.snap
---
source: crates/tokmd-tool-schema/tests/toolschema_depth_w62.rs
expression: v
---
{
  "$schema": "https://json-schema.org/draft-07/schema#",
  "description": "A test tool",
  "name": "mytool",
  "schema_version": 1,
  "tools": [
    {
      "description": "A test tool",
      "name": "mytool",
      "parameters": {
        "properties": {},
        "required": [],
        "type": "object"
      }
    },
    {
      "description": "Scan files",
      "name": "scan",
      "parameters": {
        "properties": {
          "path": {
            "description": "Target path",
            "type": "string"
          },
          "verbose": {
            "description": "Verbose output",
            "type": "boolean"
          }
        },
        "required": [
          "path"
        ],
        "type": "object"
      }
    },
    {
      "description": "Export results",
      "name": "export",
      "parameters": {
        "properties": {
          "count": {
            "description": "Verbosity count",
            "type": "integer"
          },
          "format": {
            "default": "json",
            "description": "Output format",
            "enum": [
              "json",
              "csv",
              "tsv"
            ],
            "type": "string"
          }
        },
        "required": [],
        "type": "object"
      }
    }
  ],
  "version": "2.0.0"
}
