crates/tokmd-tool-schema/tests/snapshots/toolschema_depth_w62__w62_openai.snap
---
source: crates/tokmd-tool-schema/tests/toolschema_depth_w62.rs
expression: v
---
{
  "functions": [
    {
      "description": "A test tool",
      "name": "mytool",
      "parameters": {
        "properties": {},
        "required": [],
        "type": "object"
      }
    },
    {
      "description": "Scan files",
      "name": "scan",
      "parameters": {
        "properties": {
          "path": {
            "description": "Target path",
            "type": "string"
          },
          "verbose": {
            "description": "Verbose output",
            "type": "boolean"
          }
        },
        "required": [
          "path"
        ],
        "type": "object"
      }
    },
    {
      "description": "Export results",
      "name": "export",
      "parameters": {
        "properties": {
          "count": {
            "description": "Verbosity count",
            "type": "integer"
          },
          "format": {
            "description": "Output format",
            "enum": [
              "json",
              "csv",
              "tsv"
            ],
            "type": "string"
          }
        },
        "required": [],
        "type": "object"
      }
    }
  ]
}
